[project]
name = "netprobe-lite"
version = "1.4.3"
description = "Simple and effective tool for measuring ISP performance at home."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython==2.7.0",
    "prometheus-client==0.21.1",
    "pydantic>=2.10.6",
    "python-dotenv==1.1.1",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
